--- a/style/results.css
+++ b/style/results.css
@@ -242,6 +242,10 @@ form.search::after {
 
 /** NEW **/
 
+#account-button{
+    width: 100%;
+}
+
 /* https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting */
 .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
@@ -414,7 +418,7 @@ p {
     }
 
     .toggle-map{
-        left:33px;
+        left:34px;
     }
 
     p.toggle{
