--- a/style/style.css
+++ b/style/style.css
@@ -118,17 +118,28 @@ form.search::after {
     height: 50%
 }
 
+
 #landing-page{
     height: 90vh;
+    bottom: 0;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(10, 1fr);
     background-size: cover;
-    background-image: url("../img/background_desktop.png");
     background-position-x: center;
     background-position-y: bottom;
 }
 
+#background{
+    width:100%;
+    height:90vh;
+    bottom: 0;
+    position:fixed;
+    background-image: url("../img/background_desktop.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 /*    BUTTON    */
 
@@ -185,21 +196,29 @@ form.search::after {
 }
 
 /*     Sign Up Page     */
+#background-blur{
+    width:100%;
+    height:100%;
+}
 
 div#blur{
+    grid-column: 1/-1;
+    grid-row: 1/-1;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
     transition: 1.5s;
-    position: fixed;
+    position: relative;
+    padding-bottom: 100px;
 }
 
 #blur>div{
-    position:fixed;
+    position:absolute;
     max-width: 768px;
-    bottom:5%;
     width:88%;
-    height: 80%;
+    top: 5%;
+    min-height: 80%;
+    height: auto;
     transition: 1.8s;
     z-index: 5;
 }
@@ -212,8 +231,14 @@ div#blur > div > form{
 
 @media screen and (max-width: 768px){
 
-    #landing-page{
+    #background{
+        background-position-y: bottom;
         background-image: url("../img/background_landing.png");
+    }
+
+
+    #landing-page{
+        /*background-image: url("../img/background_landing.png");*/
     }
 
     .nav-links a{
@@ -314,7 +339,7 @@ div#blur > div > form{
     width: auto;
 }
 
-#form_signUp{
+#form_signUp, #form_login{
     text-align: center;
 }
 
@@ -340,9 +365,9 @@ div#blur > div > form{
 /* ----------- Add item page ------------ */
 
 div.add-object{
-    position: absolute;
+    position: relative;
+    top:40vh;
     height:100%;
-    bottom:0;
     padding:50px;
     border-radius: 20px;
     min-width: 400px; /* Prevents form from being unreadable with small width */
