Added min width to navbar

--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
 
 nav {
     height: 10vh;
+    min-height: 50px;
     background: #5b78c7;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
