--- a/style/style.css
+++ b/style/style.css
@@ -140,6 +140,7 @@ form.search::after {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    z-index: 999;
 }
 
 /*    BUTTON    */
@@ -419,5 +420,35 @@ div.add-object{
     margin: 60px 0 40px 0;
 }
 
+
+/* ------- Footer ------- */
+.web-footer {
+    z-index: 1000;
+    min-height: 100px;
+    background-color: #33383b;
+    color: white;
+    height: 10vh;
+    bottom: 0px;
+}
+
+.web-footer a{
+    font-size: calc(16px + 1.5vh);
+}
+
+.left-side {
+    float: left;
+}
+
+.right-side a {
+    float: right;
+    margin: 2vh .5vw 2vh .5vw;
+    background-color: gray;
+    padding: 1vh 1vw 1vh 1vw;
+    cursor: pointer;
+}
+
+.right-side a:hover {
+    background-color: darkgray;
+}
 
 
