--- a/style/style.css
+++ b/style/style.css
@@ -140,7 +140,6 @@ form.search::after {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: 999;
 }
 
 /*    BUTTON    */
@@ -166,7 +165,8 @@ form.search::after {
     background-color: rgba(var(--button-colour),0.5);
     float: left;
     width: 48.5%;
-    height: 90%;
+    height: 100%;
+    font-size: 1vw;
     margin-bottom: 10%;
     border-radius: 50px 50px 50px 50px;
 }
@@ -208,7 +208,7 @@ div#blur{
     grid-row: 1/-1;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
     transition: 1.5s;
     position: relative;
     padding-bottom: 100px;
@@ -423,7 +423,9 @@ div.add-object{
 
 /* ------- Footer ------- */
 .web-footer {
-    z-index: 1000;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
     min-height: 100px;
     background-color: #33383b;
     color: white;
