--- a/style/results.css
+++ b/style/results.css
@@ -14,7 +14,7 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
 }
 
 .map-view{
-    position:fixed;
+    position:fixed; /* Prevents map scrolling */
     z-index: 1;
     background-image: url("../img/map_big.jpg");
     background-position: center;
@@ -26,19 +26,20 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
 
 #list-view{
     z-index: 2;
-    position: absolute;
+    position: absolute; /* With respect to landing page */
     top:10vh;
     right:15px;
 }
 
 
+/* Each search result */
 .list-item{
-    /*Each item*/
+    /* 1 x 2 grid*/
     display:grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
     position: relative;
-    float:top;
+    float:top; /*list items one after another starting at the top */
     margin: 15px auto;
     width: 450px;
     height: 110px;
@@ -169,9 +170,10 @@ p {
         margin-top: auto;
         margin-bottom: auto;
         left:3px;
-        transition: 0.5s;
+        transition: 0.5s; /* toggle switch annimation time */
     }
 
+    /* Moves the toggle switch when enables */
     .toggle-map{
         left:34px;
     }
