--- a/src/components/Forms/Form.css
+++ b/src/components/Forms/Form.css
@@ -1,31 +1,72 @@
+#full-page-form{
+    width: 100%;
+    height: 100vh;
+    padding: 15vh 5%;
+    /*background-color: blue;*/
+}
 
-.form-style{
+#pop-up-form{
     position: absolute;
-    display: grid;
     grid-auto-rows: auto;
     grid-template-columns: 100%;
-    text-align: center;
     width: 35%;
     min-width: 400px;
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    align-items: center;
-    justify-items: center;
     background-color: white;
-    font-size: 15px;
     padding: 25px 0;
     box-shadow: 0 25px 46px rgba(0,0,0,0.70), 0 20px 15px rgba(0,0,0,0.32);
 }
 
-.form-style > div{
+.form-style{
+    display: grid;
+    grid-auto-rows: auto;
+    grid-template-columns: 100%;
+    text-align: center;
+    align-items: center;
+    justify-items: center;
+    background-color: white;
+    font-size: 15px;
+}
+
+#pop-up-form > div{
     width: 75%;
-    height: 100%;
     padding: 10px 0px;
+}
+
+#full-page-form > div{
+    width: 50%;
+    padding: 1% 0%;
 }
 
 .form-style > h1 {
     padding: 15px 0px;
+}
+
+.terms-and-conditions{
+    font-size: 15px;
+    padding: 2.5px 0px;
+}
+
+.form-style select{
+    display: block;
+    height: 35px;
+    width: 100%;
+    text-align: center;
+    margin-top: 3px;
+    border: 1px solid grey;
+    border-radius: 20px 20px 20px 20px;
+}
+
+.form-style input {
+    display: block;
+    height: 35px;
+    width: 100%;
+    text-align: center;
+    margin-top: 3px;
+    border: 1px solid grey;
+    border-radius: 20px 20px 20px 20px;
 }
 
 .form-style input[type="checkbox"]{
@@ -37,11 +78,6 @@
     margin: 0px;
 }
 
-.terms-and-conditions{
-    font-size: 15px;
-    padding: 2.5px 0px;
-}
-
 .form-style input[type="submit"]{
     border: none;
     background-color: rgba(var(--button-colour),0.5);
@@ -50,22 +86,10 @@
     width: 35%;
 }
 
-.form-close{
+.form-style .error-message {
     position: absolute;
-    padding: 20px;
-    top:0;
-    right: 0;
-}
-
-
-.form-style input {
-    display: block;
-    height: 35px;
-    width: 100%;
-    text-align: center;
-    margin-top: 3px;
-    border: 1px solid grey;
-    border-radius: 20px 20px 20px 20px;
+    font-size: 12px;
+    color: red;
 }
 
 form label {
@@ -90,6 +114,7 @@ form label {
     height: 32px;
     opacity: 0.3;
 }
+
 .close:hover {
     opacity: 1;
     cursor: pointer;
@@ -113,8 +138,9 @@ form label {
     display: none;
 }
 
-.form-style .error-message {
-    position: absolute;
-    font-size: 12px;
-    color: red;
+@media screen and (max-width: 768px){
+    #full-page-form > div{
+        width: 100%;
+        padding: 1% 0%;
+    }
 }
