--- a/src/style.css
+++ b/src/style.css
@@ -52,59 +52,59 @@
 
 /* ----------- Add item page ------------ */
 
-div.add-object{
-  position: relative;
-  height:100%;
-  border-radius: 20px;
-  min-width: 400px; /* Prevents form from being unreadable with small width */
-  width: 50%;
-  /*background-color: cornflowerblue;*/
-}
+/*div.add-object{*/
+/*  position: relative;*/
+/*  height:100%;*/
+/*  border-radius: 20px;*/
+/*  min-width: 400px; !* Prevents form from being unreadable with small width *!*/
+/*  width: 50%;*/
+/*  !*background-color: cornflowerblue;*!*/
+/*}*/
 
-.add-object > input,
-.add-object > select{
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
+/*.add-object > input,*/
+/*.add-object > select{*/
+/*  width: 100%;*/
+/*  padding: 12px 20px;*/
+/*  margin: 8px 0;*/
+/*  display: inline-block;*/
+/*  border: 1px solid #ccc;*/
+/*  border-radius: 4px;*/
+/*  box-sizing: border-box;*/
+/*}*/
 
-.add-object > input[type=number]{
-  width: calc(50% - 4px); /* minus 2px to compensate for border */
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
+/*.add-object > input[type=number]{*/
+/*  width: calc(50% - 4px); !* minus 2px to compensate for border *!*/
+/*  padding: 12px 20px;*/
+/*  margin: 8px 0;*/
+/*  display: inline;*/
+/*  border: 1px solid #ccc;*/
+/*  border-radius: 4px;*/
+/*  box-sizing: border-box;*/
+/*}*/
 
-.add-object > label {
-  display: block;
-  text-align: center;
-  margin: 5px auto;
-}
+/*.add-object > label {*/
+/*  display: block;*/
+/*  text-align: center;*/
+/*  margin: 5px auto;*/
+/*}*/
 
-#pic{
-  display: block;
-}
+/*#pic{*/
+/*  display: block;*/
+/*}*/
 
-.add-object > .button-style{
-  position: relative;
-  display: block;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  width: auto;
-  padding: 10px 80px;
-}
+/*.add-object > .button-style{*/
+/*  position: relative;*/
+/*  display: block;*/
+/*  margin-top: 20px;*/
+/*  margin-bottom: 30px;*/
+/*  width: auto;*/
+/*  padding: 10px 80px;*/
+/*}*/
 
-.add-object > h1 {
-  text-align: center;
-  margin: 60px 0 40px 0;
-}
+/*.add-object > h1 {*/
+/*  text-align: center;*/
+/*  margin: 60px 0 40px 0;*/
+/*}*/
 
 
 
