--- a/src/components/results.css
+++ b/src/components/results.css
@@ -27,7 +27,7 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
 #list-view{
     z-index: 2;
     position: absolute; /* With respect to landing page */
-    top:10vh;
+    top:90px;
     right:15px;
 }
 
@@ -75,7 +75,9 @@ p {
     float: right;
     margin-left: 7px;
     text-align: center;
-
+}
+#list-view > ul{
+    background-color: lightgrey;
 }
 
 @media screen and (max-width: 768px){
@@ -85,7 +87,7 @@ p {
     }
 
     .list-item{
-        top: 15vh;
+        top: 80px;
     }
 
     .map-view {
@@ -108,7 +110,7 @@ p {
     #list-view{
         float:left;
         right:0;
-        top: 2vh;
+        top: 20px;
         padding-bottom: 180px;
         position: absolute;
         background-size: cover;
