--- a/src/components/Search/SearchBar.css
+++ b/src/components/Search/SearchBar.css
@@ -16,26 +16,43 @@ form.search input[type=text] {
     padding: 10px;
     font-size: 17px;
     border: 1px solid blue;
-    border-radius: 50px 0px 0px 50px;
+    border-radius: 50px 0 0 50px;
+    border-right: none;
     float: left;
-    width: 85%;
+    width: 80%;
     background: white;
 }
 
 .search-button {
     float: left;
-    width: 15%;
-    padding: 10px;
+    width: 10%;
+    padding: 10px 3px;
     background: white;
     font-size: 17px;
     border: 1px solid blue;
-    border-radius: 0px 50px 50px 0px;
+    border-radius: 0 50px 50px 0;
     border-left: none;
     cursor: pointer;
 }
 
-.search-button:hover {
-    background: #0b7dda;
+.search-location-button {
+    float: left;
+    width: 10%;
+    padding: 10px 3px;
+    background: white;
+    font-size: 17px;
+    border: 1px solid blue;
+    border-left: none;
+    border-right: none;
+    cursor: pointer;
+}
+
+.search .fa-location-arrow{
+    color: #cccccc;
+}
+
+.search .fa-search{
+    color: #0b7dda;
 }
 
 
