--- a/src/components/Buttons/SigninLoginButton.css
+++ b/src/components/Buttons/SigninLoginButton.css
@@ -3,17 +3,22 @@
 }
 
 .buttons-nav{
+    /*width: 100%;*/
     grid-column: 14 / span 2;
     height: 50%;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 3px;
 }
 
 .buttons-main{
     display: none;
-    grid-column: 4 /span 10;
+    grid-column: 2 /span 14;
     grid-row: 4/ span 1;
-    width: 100%;
-    height: 80%;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 3px;
     align-self: end;
+    height: 80%;
     z-index: 3;
 }
 
@@ -22,12 +27,13 @@
     border: none;
     background-color: rgba(var(--button-colour),0.5);
     float: left;
-    width: 48.5%;
+    width: 100%;
     height: 100%;
     font-size: 1vw;
     font-size: calc(10px + .4vw);
     margin-bottom: 10%;
     border-radius: 50px 50px 50px 50px;
+    color: white;
 }
 
 .button-style:hover{
@@ -41,7 +47,7 @@
 
 @media screen and (max-width: 768px) {
     .buttons-main{
-        display: block;
+        display: grid;
     }
 
     .buttons-nav{
@@ -53,5 +59,9 @@
         background-color: rgba(var(--button-colour), 0.75);
     }
 
-    .button-style{height: 90%;}
+    .button-style{
+        height: 90%;
+        font-size: 1.5vw;
+        font-size: calc(10px + 1.2vw);
+    }
 }
