--- a/src/components/results.css
+++ b/src/components/results.css
@@ -43,8 +43,9 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
     margin: 15px auto;
     width: 450px;
     height: 110px;
-    background-color: #547ec2;
+    background-color: #72acec;
     border-radius: 5px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.20), 0 7px 7px rgba(0,0,0,0.23);
 }
 
 .list-item:hover{
@@ -56,7 +57,9 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
     background-image: url("../img/gorge.jpg");
     background-size: cover;
     height: 90%;
-    width: 85%
+    width: 85%;
+    border: 1px solid #0277d7;
+
 }
 
 h2 {
