--- a/src/components/Forms/Form.css
+++ b/src/components/Forms/Form.css
@@ -134,9 +134,9 @@ form label {
     transform: rotate(-45deg);
 }
 
-.login, .signup{
-    display: none;
-}
+/*.login, .signup{*/
+/*    display: none;*/
+/*}*/
 
 @media screen and (max-width: 768px){
     #full-page-form{
