--- a/src/components/results.css
+++ b/src/components/results.css
@@ -20,7 +20,8 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
     background-position: center;
     background-size: cover;
     width:100%;
-    height:100vh;
+    height:calc(100% - 80px);
+    padding-top:80px;
     transition: 1s; /* Slide in transition time */
 }
 
@@ -28,7 +29,7 @@ Code will ensure the list and map text (in the toggle) cannot be highlighted
     z-index: 2;
     position: absolute; /* With respect to landing page */
     top:90px;
-    right:15px;
+    right:55px;
 }
 
 
