Added search results div

--- a/frontend/src/components/Nav/Navbar.css
+++ b/frontend/src/components/Nav/Navbar.css
@@ -14,7 +14,8 @@ nav {
     align-items: center;
 }
 .results{
-    overflow:visible;
+    position: absolute;
+    transform: translateY(50px);
 }
 nav.transparent{
     background: rgba(21, 161, 220, 0);
