Changed Navbar Layout

--- a/frontend/src/components/Search/SearchBar.css
+++ b/frontend/src/components/Search/SearchBar.css
@@ -1,9 +1,9 @@
-.search-nav{
-    grid-column: 10 / span 4;
-    grid-row: 1;
-    /* background-color: red; */
-    width: 100%;
-}
+/*.search-nav{*/
+/*    grid-column: 10 / span 4;*/
+/*    grid-row: 1;*/
+/*    !* background-color: red; *!*/
+/*    width: 100%;*/
+/*}*/
 
 .search-main{
     grid-column: 2 /span 14;
@@ -58,9 +58,9 @@ form.search input[type=text] {
 
 
 @media screen and (max-width: 768px){
-    .search-nav{
-        display:none;  /* nav search bar gets removed when in mobile */
-    }
+    /*.search-nav{*/
+    /*    display:none;  !* nav search bar gets removed when in mobile *!*/
+    /*}*/
 
     .search-main{
         display: block;
