--- a/frontend/src/components/Nav/Navbar.css
+++ b/frontend/src/components/Nav/Navbar.css
@@ -86,6 +86,26 @@ nav.transparent{
 /*}*/
 /************************************** navlink underline **************************/
 
+.buttons-nav{
+    /*width: 100%;*/
+    color: white;
+    grid-column: 10 / span 6;
+    height: 50%;
+    display:grid;
+    grid-column-gap: 12px;
+    align-items: center;
+}
+
+.user-button{
+    background-color: rgba(var(--button-colour),0.5);
+    border:1px solid white;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width: 40px;
+    height: 40px;
+}
+
 @media screen and (max-width: 768px){
     .nav-links > *{
         border-bottom: solid;
@@ -95,7 +115,6 @@ nav.transparent{
         width: 100%;
         font-size: 4vw;
         color: #0277d7;
-        /*grid-auto-flow: row;*/
     }
 
 
@@ -155,4 +174,7 @@ nav.transparent{
         -webkit-clip-path: circle(1500px at 90% -10%);
     }
 
+    .buttons-nav{
+        display: none;
+    }
 }
