--- a/frontend/src/components/Search/SearchBar.css
+++ b/frontend/src/components/Search/SearchBar.css
@@ -81,6 +81,9 @@ div.results-item:hover{
 a.results-item {
     text-decoration: none;
     color: black;
+    height: 100%;
+    width: 100%;
+    display:inline-block;
 }
 
 
