--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -18,7 +18,6 @@
   grid-template-rows: repeat(10, 1fr);
   background-image: url("img/background_desktop.png");
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: bottom;
@@ -28,9 +27,28 @@
 @media screen and (max-width: 768px){
 
   .container {
-    background-image: url("./img/background_landing.png");
+    background-image: none;
+    background-color: white;
   }
 
+  #background-mobile-top{
+    position: fixed;
+    background-image: url("./img/background_landing_top.png");
+    background-size: cover;
+    background-position-y: bottom;
+    width: 100%;
+    height: 150px;
+  }
+
+  #background-mobile-bottom{
+    position: absolute;
+    background-image: url("./img/background_landing_bottom.png");
+    background-size: cover;
+    background-position-x: center;
+    width: 100%;
+    height: 60%;
+    bottom: 0;
+  }
 }
 
 .centerY{
