--- a/frontend/src/components/Forms/Form.css
+++ b/frontend/src/components/Forms/Form.css
@@ -1,7 +1,7 @@
 #full-page-form{
     width: 100%;
     height: 100vh;
-    margin: 10vh 0;
+    margin: 100px 0;
     /*background-color: blue;*/
 }
 
