--- a/frontend/src/components/Nav/Navbar.css
+++ b/frontend/src/components/Nav/Navbar.css
@@ -140,14 +140,14 @@ nav.transparent{
         height: 100%;
         width: 100%;
         font-size: 4vw;
-        color: #0277d7;
+        color: white;
     }
 
 
     .line{
         width: 30px;
         height: 3px;
-        background: #0277d7;
+        background: white;
         margin: 5px;
     }
 
@@ -190,7 +190,7 @@ nav.transparent{
         grid-auto-flow: row;
         grid-template-columns: 1fr;
         position: fixed;
-        background: rgba(209, 255, 255, 0.91);
+        background: rgba(54, 181, 255);
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -201,8 +201,9 @@ nav.transparent{
     }
 
     .nav-links >*:hover{
-        background-color: rgba(166, 202, 209, 0.91);
+        background-color: rgb(177, 240, 250);
         transition: .20s;
+        color: #72acec;
     }
 
     .nav-links.open{
