Created a verify password form component.

--- a/frontend/src/components/Forms/Form.css
+++ b/frontend/src/components/Forms/Form.css
@@ -5,6 +5,7 @@
     /*background-color: blue;*/
 }
 
+/*TODO - convert to class*/
 #pop-up-form{
     position: absolute;
     grid-auto-rows: auto;
@@ -102,6 +103,7 @@ form label {
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     z-index: 100;
     background-color: rgba(0,0,0,0.4);
 }
