Nav Link underline now stays to indicate what page you're on

--- a/frontend/src/components/Nav/Navbar.css
+++ b/frontend/src/components/Nav/Navbar.css
@@ -85,6 +85,12 @@ nav.transparent{
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
 }
+
+.nav-line:before{
+    visibility:visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
 /************************************** /navlink underline **************************/
 
 .buttons-nav{
@@ -243,5 +249,9 @@ nav.transparent{
     /*hides underline animation in mobile*/
     .nav-links > *:hover:before {
         visibility: hidden;
+    }
+
+    .nav-line:before{
+        visibility:hidden;
     }
 }
